--- a/apps/frontend/src/pages/HomePage.css
+++ b/apps/frontend/src/pages/HomePage.css
@@ -15,7 +15,6 @@
 
 .logo-header {
   text-align: center;
-  margin-bottom: var(--spacing-md);
 }
 
 .main-logo {
@@ -32,6 +31,11 @@
   color: #333;
   line-height: 1.8;
 }
+
+.homepage-subtitle p {
+  font-size: 2rem !important;
+}
+
 
 .red-text {
   color: #e74c3c; /* 말 → 빨간색 */
@@ -60,7 +64,7 @@
   position: relative;
   width: 100%;
   max-width: 1200px;
-  height: 1000px;
+  height: 800px;
   overflow: hidden;
   border-radius: var(--border-radius-lg);
   box-shadow: 0 4px 12px var(--shadow-color);
